# ai-smm-bot

./: .env.example  .env.production.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.example.yml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/examples/: crm_bot_smm_onboarding_teeon.json  saas_onboarding_teeon.json
backend/tests/: conftest.py  test_ab_testing_service.py  test_admin_scripts.py  test_ai_campaign_api.py  test_ai_campaign_security.py  test_ai_campaign_service.py  test_ai_campaign_ui.py  test_ai_learning_api.py  test_ai_learning_security.py  test_ai_learning_service.py  test_ai_learning_ui.py  test_analytics_api.py  (+468 more)
deploy/: Caddyfile.example  nginx.conf.example
Докс/: 00_Описание_проекта.md  01_Архитектура.md  02_Этапы_разработки.md  03_Правила_разработки.md  04_Проверки_и_тестирование.md  05_Интеграции.md  06_Модель_данных.md  07_Журнал_изменений.md  08_Следующие_задачи.md  09_Словарь_медиа_тегов.md  10_Логика_выбора_тем.md  11_Генерация_постов.md  12_Согласование_постов.md  13_Автопостинг.md  14_Аналитика.md  15_Внешние_картинки.md  16_Автономный_режим.md  17_MVP_запуск.md  18_Публичная_папка_Яндекс_Диска.md  19_Улучшение_медиа.md  20_SEO_VK_группа_TEEON.md  21_CRM_форма_БОТ_СММ.md  22_Группировка_медиа_и_VK_посты.md  23_Telegram_media_group.md  24_Мультиплатформенная_публикация_медиа.md  25_SaaS_регистрация_проекты_биллинг.md  26_Botfleet_SaaS_UX_платформы_расписания_аналитика.md  27_Botfleet_аналитика_и_платежи.md  28_Botfleet_SaaS_безопасность.md  29_Botfleet_Production_Auth_Sessions.md  30_Botfleet_Public_Launch_Readiness.md  31_Botfleet_Платежи_ЮKassa_СБП_QR.md  32_Botfleet_Каталог_платформ_и_аналитика_постов.md  33_Botfleet_Self_Service_Platform_Connections.md  34_Botfleet_Media_Proxy_Public_Image_URL.md  35_Botfleet_Schedule_Automation_Engine.md  36_Botfleet_Background_Scheduler_Worker.md  37_Botfleet_Review_Learning_Automation.md  38_Botfleet_Metrics_Import_Learning_Feedback.md  39_Botfleet_AB_Testing_Topic_Optimization.md  (+44 more)
(+745 files in other folders)
