[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-smm-bot"
version = "0.1.0"
description = "AI-SMM bot for automated social media management of company projects (TEEON, Фабрика сувениров)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "httpx>=0.27",
    "pillow>=10.3",
    "pillow-heif>=0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools]
package-dir = { "" = "backend" }

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
# В env.py импорты идут после настройки sys.path (это требование Alembic).
"backend/alembic/env.py" = ["E402"]
# Автогенерируемые миграции могут содержать длинные строки и свой порядок импортов.
"backend/alembic/versions/*" = ["E501", "I001"]
# UI-модуль встраивает HTML/CSS/JS строками — длинные строки естественны.
"backend/app/api/ui.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
mypy_path = "backend"
files = ["backend/app"]
strict = true
plugins = ["pydantic.mypy"]
warn_unused_configs = true

[[tool.mypy.overrides]]
# pillow-heif не поставляет py.typed-маркер; playwright — опциональная dev-зависимость
# (не в prod requirements) — игнорируем отсутствие типов/модуля.
module = ["pillow_heif.*", "playwright.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
addopts = "-q"
